# sub-auto-rename

./: Cargo.toml  README.md  licence
src/: lib.rs  main.rs  name_signature.rs
