[package]
name = "sub-auto-rename"
description = "A program that automatically renames subtitle files to their corresponding movie files names"
authors = ["Maarifa Maarifa"]
categories = ['command-line-utilities', "movies", "tv", "subtitles"]
repository = "https://github.com/sub-auto-rename"
license = "MIT"
version = "0.3.0"
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2.0.0"
log = "0"
simple_logger = "4"
thiserror = "1"
