[package]
name = "sub-auto-rename"
description = "A program that automatically renames subtitle files to their corresponding movie files names"
authors = ["Maarifa Maarifa"]
categories = ['command-line-utilities', "movies", "tv", "subtitles"]
repository = "https://github.com/MaarifaMaarifa/sub-auto-rename"
license = "MIT"
version = "0.5.0"
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2.0.0"
log = "0"
simple_logger = "4"
thiserror = "1"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]
